<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NOTEBOOK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">返回</string>
    <string name="resname">新用户注册</string>
    <string name="listname">日记列表</string>
    <string name="addname">添加新日记</string>
    <string name="compile">修改日记</string>
    <string name="list">添加</string>
    <string name="ad">管理</string>
    <string name="admin1">返回</string>
    <string name="add">完成</string>
    <string name="change">编辑</string>
    <string name="dri">日记随笔v1.0</string>
    <string name="user_name">账号 :</string>
    <string name="password">密码 :</string>
    <string name="admin">管理员</string>
    <string name="hi">请输入账号</string>
    <string name="hi1">请输入密码</string>
    <string name="res">立即注册</string>
    <string name="log">马上登陆</string>
    <string name="mydri">MyDairy copyright chinasoft</string>
    <string name="res1">注册账号 : </string>
    <string name="hi_res">请输入注册账号 </string>
    <string name="hi1_res">注册账号 : </string>

</resources>