<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/dri"
                android:textColor="#CD950C"
                android:textSize="30dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="#bf783a"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/ed"
                    android:hint="@string/hi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#bf783a"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/ed"
                    android:hint="@string/hi1"
                    android:inputType="textPassword" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_res"
                    android:layout_width="135dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/res"
                    android:text="@string/res"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn_log"
                    android:layout_width="135dp"
                    android:layout_height="fill_parent"
                    android:layout_alignBaseline="@+id/btn_res"
                    android:layout_alignBottom="@+id/btn_res"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/log"
                    android:text="@string/log"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp"
            android:text="@string/mydri"
            android:textColor="#CD950C" />
    </RelativeLayout>

</LinearLayout>